# CellTrack_GUI

./: CMakeLists.txt  CellTrack_GUI.pro  README.md  appIcon.icns  cell.cpp  cell.pro  cell_app.cpp  cell_app.hpp  content_view.cpp  content_view.hpp  control_panel.cpp  control_panel.hpp  control_panel_combobox.cpp  control_panel_combobox.hpp  control_panel_groupbox.cpp  control_panel_groupbox.hpp  core.cpp  core.hpp  display_widget.cpp  display_widget.hpp  file_combobox.cpp  file_combobox.hpp  file_finder.cpp  file_finder.hpp  general_view.cpp  general_view.hpp  helper_widget.cpp  helper_widget.hpp  helper_widget_general_py.cpp  helper_widget_general_py.hpp  helper_widget_hidden_py.cpp  helper_widget_hidden_py.hpp  helper_widget_intro.cpp  helper_widget_intro.hpp  helper_widget_log.cpp  helper_widget_log.hpp  hidden_var_view.cpp  hidden_var_view.hpp  hidden_variable.cpp  hidden_variable.hpp  (+41 more)
Resource/: Log.txt  userData.json
Resources/: test.py  userData.json
